# guardian

./: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
core/: __init__.py  decision_engine.py  intent_schema.py  permission_model.py  policy_engine.py
docs/: architecture.md  boundaries.md  decifact-product-roadmap.md  decision_artifact_v0.md  decision_provenance.md  ecosystem_positioning.md  example_decision_flow.md  guardian-constitutional-governance-whitepaper-v1.md  guardian-doctrine-map.md  guardian_vs_execution_receipts.md  interoperability.md
evidence/: __init__.py  evidence_logger.py  evidence_record.py  hash_chain.py  market-readiness-index.md  master-governance-timeline.md
examples/: agent_integration_demo.py  autogen_guardian.py  crewai_guardian.py  demo.py  email_send_allowed.py  file_delete_denied.py  langchain_guardian.py  prod_deploy_escalated.py  receipt_correlation_demo.py  replay_demo.py
guardian/: __init__.py  api.py  config.py  decision_engine.py  evidence_ledger.py  guardian.py  policy_engine.py
policy/: __init__.py  default_policy.json  policy_loader.py  policy_types.py
schemas/: decision_record.schema.json  evidence.schema.json  evidence_log_entry.schema.json  execution_receipt.schema.json  intent.schema.json  policy.schema.json
specs/: guardian-v0.2-decision-equivalence.md  guardian-v0.3-acceptance-draft.md  guardian-v0.3-acceptance.md  guardian-v0.3-mini-acceptance.md  guardian-v0.4-candidate.md
tests/: test_decision_engine.py  test_decision_record.py  test_example_smoke.py  test_ledger.py  (+5 more)
(+53 files in other folders)
